If liblrdf is installed the ladspa plugin will build against it. So add it to lib_depends.
PR:		ports/175941
Submitted by:	pawel@


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316655 35697150-7ecd-e111-bb59-0022644237b5

--- a/multimedia/gstreamer-plugins/Makefile.common
+++ b/multimedia/gstreamer-plugins/Makefile.common
@@ -349,6 +349,7 @@ gst_jpeg_PLIST_FILES=	${GST_LIB_DIR}/libgstjpeg.la \
 
 # ladspa
 gst_ladspa_BUILD_DEPENDS+=	${LOCALBASE}/include/ladspa.h:${PORTSDIR}/audio/ladspa
+gst_ladspa_LIB_DEPENDS+=	lrdf:${PORTSDIR}/textproc/liblrdf
 gst_ladspa_PLIST_FILES=		${GST_LIB_DIR}/libgstladspa.la \
 				${GST_LIB_DIR}/libgstladspa.so
 gst_ladspa_DIST=	bad
