--- a/audio/gstreamer-plugins-ladspa/Makefile
+++ b/audio/gstreamer-plugins-ladspa/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	gstreamer-plugins-ladspa
-# Date created:			3 Oct 2004
-# Whom:				Michael Johnson <ahze@FreeBSD.org>
-#
+# Created by: Michael Johnson <ahze@FreeBSD.org>
 # $FreeBSD$
 #   $MCom: ports/audio/gstreamer-plugins-ladspa/Makefile,v 1.5 2008/03/19 14:05:30 ahze Exp $
-#
 
-PORTREVISION=	0
+PORTREVISION=	2
 CATEGORIES=	audio
 
 COMMENT=	Gstreamer ladspa (Linux Audio Developer's Simple Plugin API) plugin
