Fix instructions in pkg-message.
PR:		ports/178195
Submitted by:	Nicholas Godson <resistor@peakusage.net>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316657 35697150-7ecd-e111-bb59-0022644237b5

--- a/astro/boinc-astropulse/files/pkg-message.in
+++ b/astro/boinc-astropulse/files/pkg-message.in
@@ -12,5 +12,5 @@ MANUAL INSTALLATION
 
  *) Attach to the project:
     cd %%BOINC_CLIENT_HOME%%
-    boinc_cmd --project_attach %%SETI_SITE%% <account key>
+    boinccmd --project_attach %%SETI_SITE%% <account key>
 *****************************************************************************
