--- a/german/BBBike/Makefile
+++ b/german/BBBike/Makefile
@@ -6,8 +6,8 @@
 #
 
 PORTNAME=	BBBike
-PORTVERSION=	3.17
-PORTREVISION=	1
+PORTVERSION=	3.18
+#PORTREVISION=	0
 CATEGORIES=	german
 MASTER_SITES=	SF/${PORTNAME:L}/${PORTNAME}/${PORTVERSION}
 
