- Update to 1.3.5 - Trim Makefile headers
PR:		ports/178003
Submitted by:	Hung-Yi Chen <gaod@hychen.org> (maintainer)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316660 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/babeld/Makefile
+++ b/net/babeld/Makefile
@@ -1,12 +1,8 @@
-# New ports collection makefile for:	babeld
-# Date created:		2010-04-20
-# Whom:			Hung-Yi Chen <gaod@hychen.org>
-#
+# Created by: Hung-Yi Chen <gaod@hychen.org>
 # $FreeBSD$
-#
 
 PORTNAME=	babeld
-PORTVERSION=	1.3.4
+PORTVERSION=	1.3.5
 CATEGORIES=	net
 MASTER_SITES=	http://www.pps.univ-paris-diderot.fr/~jch/software/files/
 
