--- a/security/libsodium/Makefile
+++ b/security/libsodium/Makefile
@@ -1,7 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	libsodium
-PORTVERSION=	0.3
+PORTVERSION=	0.4
 CATEGORIES=	security
 MASTER_SITES=	http://download.dnscrypt.org/libsodium/releases/
 
@@ -13,7 +13,17 @@ LICENSE=	ISCL
 GNU_CONFIGURE=	yes
 USE_LDCONFIG=	yes
 
+PORTDOCS=	AUTHORS COPYING INSTALL NEWS THANKS
+
 post-build:
 	cd ${WRKSRC} && ${MAKE} check
+
+.include <bsd.port.options.mk>
+
+post-install:
+.if ${PORT_OPTIONS:MDOCS}
+	${MKDIR} ${DOCSDIR}
+	${INSTALL_DATA} ${PORTDOCS:S,^,${WRKSRC}/,} ${DOCSDIR}/
+.endif
 
 .include <bsd.port.mk>
