--- a/dns/p5-Net-DNS-Lite/Makefile
+++ b/dns/p5-Net-DNS-Lite/Makefile
@@ -1,18 +1,14 @@
-# New ports collection makefile for:	p5-Net-DNS-Lite
-# Date created:		2010-11-26
-# Whom:			Gea-Suan Lin <gslin@gslin.org>
-#
+# Created by: Gea-Suan Lin <gslin@gslin.org>
 # $FreeBSD$
-#
 
 PORTNAME=	Net-DNS-Lite
-PORTVERSION=	0.09
+PORTVERSION=	0.10
 CATEGORIES=	dns perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	perl@FreeBSD.org
-COMMENT=	Pure-perl DNS resolver with support for timeout
+COMMENT=	Pure-Perl DNS resolver with support for timeout
 
 LICENSE=	ART10 GPLv1
 LICENSE_COMB=	dual
