Add libpaper support to print/a2ps-*[1], print/c2ps-*, print/lprps-*, graphics/jpeg2ps-*, and merge the papersize-suffixed versions into single ones respectively as print/psutils did.
Approved by:	dinoex (maintainer) [1]


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316672 35697150-7ecd-e111-bb59-0022644237b5

--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -399,8 +399,7 @@
     SUBDIR += jp2a
     SUBDIR += jpatch
     SUBDIR += jpeg
-    SUBDIR += jpeg2ps-a4
-    SUBDIR += jpeg2ps-letter
+    SUBDIR += jpeg2ps
     SUBDIR += jpeginfo
     SUBDIR += jpegoptim
     SUBDIR += jpg2pdf
