--- a/print/lprps/Makefile
+++ b/print/lprps/Makefile
@@ -1,39 +1,20 @@
-# ex:ts=8
-# Ports collection makefile for:  lprps (letter)
-# Date created:			  Sat Aug 3, 1996
-# Whom:				  David O'Brien (obrien@cs.ucdavis.edu)
-#
+# Created by: David O'Brien <obrien@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	lprps
 PORTVERSION=	2.5
 CATEGORIES=	print
 MASTER_SITES=	ftp://ftp.jclark.com/pub/lprps/
-PKGNAMESUFFIX=	-${PAPERSIZE}
 EXTRACT_SUFX=	.tar.Z
 
-MAINTAINER=	ports@FreeBSD.org
-COMMENT=	PostScript printer filter package supporting a bidirectional serial channel
+MAINTAINER=	hrs@FreeBSD.org
+COMMENT=	PostScript printer filter supporting a bidirectional serial channel
 
-MAKE_FLAGS?=	PAPERSIZE=${PS} -f
+LIB_DEPENDS=	paper:${PORTSDIR}/print/libpaper
+
 PORTDOCS=	INSTALL
-
 MAN1=		psrev.1 textps.1
 MAN8=		lprps.8 psif.8 psof.8
-
-PAPERSIZE?=	letter
-PS=		${PAPERSIZE:U}
-
-.if ${PAPERSIZE} != a4 && ${PAPERSIZE} != letter
-.BEGIN:
-	@${ECHO_MSG} "Error: invalid value for PAPERSIZE: \"${PAPERSIZE}\""
-	@${ECHO_MSG} "Possible values are:  a4 or letter"
-	@${FALSE}
-.endif
-
-post-patch:
-	${REINPLACE_CMD} -e 's/^\(CC[^g]*\)cc$$/\1${CC}/' ${WRKSRC}/Makefile
 
 do-install:
 	${MKDIR} ${DATADIR}
@@ -53,8 +34,5 @@ post-install:
 	${MKDIR} ${DOCSDIR}
 	cd ${WRKSRC} && ${INSTALL_DATA} ${PORTDOCS} ${DOCSDIR}
 .endif
-	@${ECHO_MSG} ""
-	@${ECHO_MSG} Now edit your /etc/printcap
-	@${ECHO_MSG} ""
 
 .include <bsd.port.mk>
