--- a/graphics/jpeg2ps/Makefile
+++ b/graphics/jpeg2ps/Makefile
@@ -1,39 +1,34 @@
-# New ports collection makefile for:	jpeg2ps (letter)
-# Date created:		30 December 2000
-# Whom:			Lars Koeller <Lars.Koeller@Uni-Bielefeld.de>
-#
+# Created by: Lars Koeller <Lars.Koeller@Uni-Bielefeld.de>
 # $FreeBSD$
-#
 
 PORTNAME=	jpeg2ps
 PORTVERSION=	1.9
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	graphics converters
 MASTER_SITES=	http://www.pdflib.com/fileadmin/pdflib/products/more/jpeg2ps/
-PKGNAMESUFFIX=	-${PAPERSIZE}
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	hrs@FreeBSD.org
 COMMENT=	Converter for JPEG compressed images to PostScript Level 2
 
-MAKE_ARGS+=	CFLAGS="-c ${CFLAGS}" LD="${CC}"
+LIB_DEPENDS=	paper:${PORTSDIR}/print/libpaper
 
+OPTIONS_DEFINE=	DOCS
+CFLAGS=		-DLIBPAPER -I${LOCALBASE}/include
+LDADD=		-lm -lpaper -L${LOCALBASE}/lib
+MAKE_ARGS=	LDADD="${LDADD}"
 MAN1=		jpeg2ps.1
 PLIST_FILES=	bin/jpeg2ps
 
-PAPERSIZE?=	letter
+.include <bsd.port.options.mk>
 
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 PORTDOCS=	jpeg2ps.txt
-.endif
-
-.if ${PAPERSIZE} == a4
-CFLAGS+=	-DA4
 .endif
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/jpeg2ps ${PREFIX}/bin
 	${INSTALL_MAN} ${WRKSRC}/jpeg2ps.1 ${MANPREFIX}/man/man1
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	@${MKDIR} ${DOCSDIR}
 	${INSTALL_DATA} ${WRKSRC}/jpeg2ps.txt ${DOCSDIR}
 .endif
