Set FETCH_ARGS to follow redirections.
The download URL from Dropbox seems to be redirecting to another location
these days, which made make fetch fail.

PR:		ports/177994


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316678 35697150-7ecd-e111-bb59-0022644237b5

--- a/games/knights-kde4/Makefile
+++ b/games/knights-kde4/Makefile
@@ -12,6 +12,7 @@ COMMENT=	KDE4 chess interface
 
 RUN_DEPENDS=	${LOCALBASE}/bin/gnuchess:${PORTSDIR}/games/gnuchess
 
+FETCH_ARGS?=	-Fpr
 LATEST_LINK=	${PORTNAME}-kde4
 MAKE_JOBS_SAFE=	yes
 USE_BZIP2=	yes
