- Fix USE_ICONV leftovers missed in the previous update
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316684 35697150-7ecd-e111-bb59-0022644237b5

--- a/chinese/cconv/Makefile
+++ b/chinese/cconv/Makefile
@@ -15,7 +15,7 @@ MAINTAINER=	sunpoet@FreeBSD.org
 COMMENT=	Simplified-Traditional Chinese conversion tool
 
 GNU_CONFIGURE=	yes
-USE_ICONV=	yes
+USES=		iconv
 USE_LDCONFIG=	yes
 
 post-patch:
