- Remove USES= desktop-file-utils, because MimeType entry is not present in .desktop files.
Reported by:	ak@


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316689 35697150-7ecd-e111-bb59-0022644237b5

--- a/x11-wm/xfce4-session/Makefile
+++ b/x11-wm/xfce4-session/Makefile
@@ -3,7 +3,7 @@
 
 PORTNAME=	xfce4-session
 PORTVERSION=	4.10.0
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	x11-wm xfce
 MASTER_SITES=	${MASTER_SITE_XFCE}
 DIST_SUBDIR=	xfce4
@@ -25,7 +25,7 @@ INSTALLS_ICONS=	yes
 USE_BZIP2=	yes
 USE_GMAKE=	yes
 USE_GNOME=	gtk20 glib20 intltool intlhack
-USES=		desktop-file-utils pathfix pkgconfig
+USES=		pathfix pkgconfig
 USE_LDCONFIG=	yes
 USE_XFCE=	configenv libmenu libutil panel xfconf
 USE_XORG=	x11 sm ice
