- Update to 2.5.11  [1] - Trim Makefile header - Remove indefinite article from COMMENT - Add LICENSE (GPLv2) - Use GitHub as download site - Remove do-extract target - Reformat pkg-message
Build log:	http://goo.gl/fb8t7
Release Notes:	http://goo.gl/UXhi8
Submitted by:	se (via private email)  [1]


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316691 35697150-7ecd-e111-bb59-0022644237b5

--- a/www/joomla25/Makefile
+++ b/www/joomla25/Makefile
@@ -1,33 +1,33 @@
-# New ports collection makefile for:	www/joomla
-# Date created:				Sat Out 15, 2005
-# Whom:					Francisco Cabrita <include@npf.pt.freebsd.org>
-#
+# Created by: Francisco Cabrita <include@npf.pt.freebsd.org>
 # $FreeBSD$
 
 PORTNAME=	joomla
-PORTVERSION=	2.5.6
+PORTVERSION=	2.5.11
 CATEGORIES=	www
-MASTER_SITES=	http://downloads.joomlacode.org/frsrelease/7/4/7/74756/
-DISTNAME=	Joomla_${PORTVERSION}-Stable-Full_Package
 
 MAINTAINER=	nivit@FreeBSD.org
-COMMENT=	A dynamic web content management system (CMS)
+COMMENT=	Dynamic web content management system (CMS)
+
+LICENSE=	GPLv2
 
 CONFLICTS=	joomla-1.*.*
 LATEST_LINK=	joomla25
 
-USE_BZIP2=	yes
+GH_ACCOUNT=	${PORTNAME}
+GH_PROJECT=	${PORTNAME}-cms
+GH_COMMIT=	6897f9b
+
 NO_BUILD=	yes
-USE_MYSQL=	yes
-USE_PHP=	mysql pcre xml zlib session gd pdf json mbstring \
-		simplexml zip mysqli
-WANT_PHP_WEB=	yes
+
 PKGMESSAGE=	${WRKDIR}/pkg-message
+
 SUB_FILES=	pkg-message
 
-do-extract:
-	@${MKDIR} ${WRKSRC}
-	@${TAR} -yxf ${DISTDIR}/${DISTNAME}${EXTRACT_SUFX} -C ${WRKSRC}
+USE_GITHUB=	yes
+USE_MYSQL=	yes
+USE_PHP=	gd json mbstring mysql mysqli pcre pdf session simplexml xml zip zlib
+
+WANT_PHP_WEB=	yes
 
 do-install:
 	@${MKDIR} ${WWWDIR}
@@ -35,13 +35,9 @@ do-install:
 		${FIND} . -type d -exec ${MKDIR} ${WWWDIR}/{} \; \
 			-exec ${CHOWN} ${WWWOWN}:${WWWGRP} ${WWWDIR}/{} \;
 	@cd ${WRKSRC} && \
-		${FIND} . \! -type d -exec ${INSTALL_DATA} {} ${WWWDIR}/{} \; \
+		${FIND} . \! -type d -and \! \( -name .gitignore -or -name LICENSE.txt \) \
+			-exec ${INSTALL_DATA} {} ${WWWDIR}/{} \; \
 			-exec ${CHOWN} ${WWWOWN}:${WWWGRP} ${WWWDIR}/{} \;
-
-# maintainer, run after make patch
-plist: patch clean
-	${FIND} ${WRKSRC} -type f | ${SORT} | ${SED} -e 's|^${WRKSRC}|%%WWWDIR%%|' > ./pkg-plist
-	${FIND} ${WRKSRC} -type d | ${SORT} -fr | ${SED} -e 's|^${WRKSRC}|@dirrm %%WWWDIR%%|' >> ./pkg-plist
 
 post-install:
 	@${CAT} ${PKGMESSAGE}
